maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: identifier expected but integer literal found.
    direction=1::direction[0]
                           ^ShortestPathMaze:29: error: ']' expected but '}' found.
  }
  ^